--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" class="container">
+    <h1>Javascript Quiz</h1>
     <div class="quiz-timer"></div>
     <div class="quiz-questions"></div>
+    <div class="quiz-results"></div>
     <button class="btn">START</button>
 </div>
 <script src="public/bundle.js"></script>
